--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
         <section class="school-history">
             <h2>About Our School</h2>
-            <p>Situated in the heart of Debagram, Nadia, our school has been a beacon of education for over seven decades. With two major streams—Science and Humanities—along with vocational subjects under the NSQF Project, the school has continuously provided high-quality education from Class IX to Class XII. The state-of-the-art laboratories for Physics, Chemistry, Biology, Geography, and Computer Science are designed to equip students with the practical knowledge and skills they need to excel in both their academic and professional journeys.</p>
+            <p>Situated in the heart of Debagram, Nadia, our school has been a beacon of education for over seven decades. With two major streams—Science and Humanities—along with vocational subjects under the NSQF Project, the school has continuously provided high-quality education from Class V to Class XII. The state-of-the-art laboratories for Physics, Chemistry, Biology, Geography, and Computer Science are designed to equip students with the practical knowledge and skills they need to excel in both their academic and professional journeys.</p>
         </section>
 
         <section class="our-mission">
