--- a/membership.html
+++ b/membership.html
@@ -111,6 +111,9 @@
             <p><strong>Bank Account No:</strong> 390702010113008</p>
             <p><strong>Bank:</strong> Union Bank of India, Lake Town Branch, Kolkata</p>
             <p><strong>IFSC:</strong> UBIN0539074</p>
+            <p>
+                <strong>NB:</strong> Please <a href="whatsappform.html">click here</a> to send your transaction details to the alumni association for faster inclusion.
+            </p>
         </section>
 
         <section>
