--- a/whatsappform.html
+++ b/whatsappform.html
@@ -103,8 +103,23 @@
     </style>
 </head>
 <body>
+    <header>
+        <h1>Transaction Details</h1>
+    </header>
+
+    <nav>
+        <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="members.html">Members</a></li>
+            <li><a href="membership.html">Membership Registration</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="login.html">Administrative Login</a></li>
+        </ul>
+    </nav>
     <div class="container">
-        <h1>Send Data To WhatsApp</h1>
+        
         <form id="dataForm">
             <!-- NAME -->
             <div class="form-group">
