--- a/whatsappform.html
+++ b/whatsappform.html
@@ -1,110 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transaction Details</title>
+    <title>Membership Registration - Alumni Association</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-       
-        /* Form Group Styling */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        table th,
+        table td {
+            padding: 12px;
+            border: 1px solid #ddd;
+            text-align: left;
+        }
+
+        table th {
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        @media screen and (max-width: 480px) {
+            .table-responsive {
+                overflow-x: auto;
+            }
+
+            table th,
+            table td {
+                padding: 6px;
+                font-size: 12px;
+            }
+        }
+
+        .table-responsive {
+            margin-top: 20px;
+        }
+
+        /* Additional styles for the form */
+        .container {
+            max-width: 600px;
+            margin: 20px auto;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background-color: #f9f9f9;
+        }
+
         .form-group {
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
 
         .form-group label {
             display: block;
-            margin-bottom: 8px;
-            color: #555555;
-            font-weight: bold;
+            margin-bottom: 5px;
         }
 
         .form-group input,
         .form-group textarea,
         .form-group select {
             width: 100%;
-            padding: 10px 15px;
-            border: 1px solid #cccccc;
+            padding: 8px;
+            border: 1px solid #ccc;
             border-radius: 4px;
-            font-size: 16px;
-            transition: border-color 0.3s;
         }
 
-        .form-group input:focus,
-        .form-group textarea:focus,
-        .form-group select:focus {
-            border-color: #0066cc;
-            outline: none;
-        }
-
-        /* Submit Button Styling */
         .submit-btn {
-            width: 100%;
-            padding: 12px;
-            background-color: #28a745;
-            color: #ffffff;
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 15px;
             border: none;
             border-radius: 4px;
-            font-size: 18px;
             cursor: pointer;
-            transition: background-color 0.3s, transform 0.1s, box-shadow 0.1s;
         }
 
         .submit-btn:hover {
-            background-color: #218838;
+            background-color: #45a049;
         }
 
-        .submit-btn:active {
-            background-color: #1e7e34;
-            transform: translateY(2px);
-            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-        }
-
-        /* Responsive Design */
-       @media (max-width: 480px) {
-            .container {
-                width: 90%;
-                padding: 15px; /* Adjust padding for smaller screens */
-            }
-
-            .container h1 {
-                font-size: 20px; /* Decrease font size for headings */
-            }
-
-            .submit-btn {
-                font-size: 14px; /* Decrease font size for the button */
-                padding: 8px; /* Optional: adjust padding for the button */
-            }
-
-   
-        }
-
-
-        /* Alert Styling */
         .alert {
-            margin-top: 20px;
-            padding: 15px;
-            border-radius: 4px;
-            font-size: 16px;
             display: none;
+            margin-top: 15px;
+            padding: 10px;
+            border-radius: 4px;
         }
 
         .alert.success {
             background-color: #d4edda;
             color: #155724;
-            border: 1px solid #c3e6cb;
         }
 
         .alert.error {
             background-color: #f8d7da;
             color: #721c24;
-            border: 1px solid #f5c6cb;
         }
     </style>
 </head>
+
 <body>
     <header>
-        <h1>Transaction Details</h1>
+        <h1>Membership Registration</h1>
     </header>
 
     <nav>
@@ -118,92 +117,130 @@
             <li><a href="login.html">Administrative Login</a></li>
         </ul>
     </nav>
-    <div class="container">
-        
-        <form id="dataForm">
-            <!-- NAME -->
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="NAME" placeholder="Enter your name" required>
+
+    <div class="content">
+        <section>
+            <h2>Join the Alumni Association</h2>
+            <p>Becoming a member of the Debagram Shibram Anandamayee Vidyapith Alumni Association allows you to reconnect with old friends, contribute to meaningful initiatives, and stay updated on school events and activities. Choose a membership option that best suits you:</p>
+        </section>
+
+        <section>
+            <h2>Membership Options</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Membership Type</th>
+                        <th>Fee (INR)</th>
+                        <th>Benefits</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1-Year Membership</td>
+                        <td>Rs 100/-</td>
+                        <td>Access to alumni events and regular updates.</td>
+                    </tr>
+                    <tr>
+                        <td>Lifetime Membership</td>
+                        <td>Rs 1000/-</td>
+                        <td>Permanent membership with lifelong access to all alumni events.</td>
+                    </tr>
+                    <tr>
+                        <td>Gold Membership</td>
+                        <td>Rs 2500/-</td>
+                        <td>Includes lifetime membership, 10th reunion registration (for you and your spouse), space in the souvenir to share memories, and a free pass for the classical music night program.</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <section>
+            <h2>Payment Details</h2>
+            <p>Please make payments to the following account:</p>
+            <p><strong>Account Name:</strong> Debagram S.A. Vidyapith Alumni Association</p>
+            <p><strong>Bank Account No:</strong> 390702010113008</p>
+            <p><strong>Bank:</strong> Union Bank of India, Lake Town Branch, Kolkata</p>
+            <p><strong>IFSC:</strong> UBIN0539074</p>
+            <p>
+                <strong>NB:</strong> Please <a href="whatsappform.html">click here</a> to send your transaction details to the alumni association for faster inclusion.
+            </p>
+        </section>
+
+        <section>
+            <h2>WhatsApp Form</h2>
+            <div class="container">
+                <form id="dataForm">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="NAME" placeholder="Enter your name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="passoutYear">Passout Year</label>
+                        <input type="text" id="passoutYear" name="PASSOUT YEAR" placeholder="Enter your passout year" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="address">Address</label>
+                        <textarea id="address" name="ADDRESS" rows="3" placeholder="Enter your address" required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="mobileno">Mobile No</label>
+                        <input type="text" id="mobileno" name="MOBILE NO" placeholder="Enter your mobile number" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="EMAIL_ID" placeholder="Enter your email address" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="transactionId">Transaction ID</label>
+                        <input type="text" id="transactionId" name="TRANSACTION ID" placeholder="Enter your transaction ID" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="transactionAmount">Transaction Amount</label>
+                        <input type="number" id="transactionAmount" name="TRANSACTION AMOUNT" placeholder="Enter transaction amount" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="bankName">Bank Name</label>
+                        <input type="text" id="bankName" name="BANK NAME" placeholder="Enter your bank name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="transactionDate">Transaction Date</label>
+                        <input type="date" id="transactionDate" name="TRANSACTION DATE" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="membership">Membership</label>
+                        <select id="membership" name="MEMBERSHIP" required>
+                            <option value="" disabled selected>Select Membership Type</option>
+                            <option value="1-Year">1-Year</option>
+                            <option value="Life Time">Life Time</option>
+                            <option value="Gold">Gold</option>
+                        </select>
+                    </div>
+                    <button type="submit" class="submit-btn">Send Via WhatsApp</button>
+                </form>
+
+                <div id="alertSuccess" class="alert success">
+                    Your data has been sent successfully!
+                </div>
+                <div id="alertError" class="alert error">
+                    There was an error sending your data. Please try again later.
+                </div>
             </div>
+        </section>
 
-            <!-- PASSOUT YEAR -->
-            <div class="form-group">
-                <label for="passoutYear">Passout Year</label>
-                <input type="text" id="passoutYear" name="PASSOUT YEAR" placeholder="Enter your passout year" required>
-            </div>
-
-            <!-- ADDRESS -->
-            <div class="form-group">
-                <label for="address">Address</label>
-                <textarea id="address" name="ADDRESS" rows="3" placeholder="Enter your address" required></textarea>
-            </div>
-
-            <!-- MOBILE NO -->
-            <div class="form-group">
-                <label for="mobileno">Mobile No</label>
-                <input type="text" id="mobileno" name="MOBILE NO" placeholder="Enter your mobile number" required>
-            </div>
-
-            <!-- EMAIL_ID -->
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="EMAIL_ID" placeholder="Enter your email address" required>
-            </div>
-
-            <!-- TRANSACTION ID -->
-            <div class="form-group">
-                <label for="transactionId">Transaction ID</label>
-                <input type="text" id="transactionId" name="TRANSACTION ID" placeholder="Enter your transaction ID" required>
-            </div>
-
-            <!-- TRANSACTION AMOUNT -->
-            <div class="form-group">
-                <label for="transactionAmount">Transaction Amount</label>
-                <input type="number" id="transactionAmount" name="TRANSACTION AMOUNT" placeholder="Enter transaction amount" required>
-            </div>
-
-            <!-- BANK NAME -->
-            <div class="form-group">
-                <label for="bankName">Bank Name</label>
-                <input type="text" id="bankName" name="BANK NAME" placeholder="Enter your bank name" required>
-            </div>
-
-            <!-- TRANSACTION DATE -->
-            <div class="form-group">
-                <label for="transactionDate">Transaction Date</label>
-                <input type="date" id="transactionDate" name="TRANSACTION DATE" required>
-            </div>
-
-            <!-- MEMBERSHIP -->
-            <div class="form-group">
-                <label for="membership">Membership</label>
-                <select id="membership" name="MEMBERSHIP" required>
-                    <option value="" disabled selected>Select Membership Type</option>
-                    <option value="1-Year">1-Year</option>
-                    <option value="Life Time">Life Time</option>
-                    <option value="Gold">Gold</option>
-                </select>
-            </div>
-
-            <!-- Submit Button -->
-            <button type="submit" class="submit-btn">Send Via WhatsApp</button>
-        </form>
-
-        <!-- Alert Messages -->
-        <div id="alertSuccess" class="alert success">
-            Your data has been sent successfully!
-        </div>
-        <div id="alertError" class="alert error">
-            There was an error sending your data. Please try again later.
-        </div>
+        <section>
+            <h2>Get Involved Today</h2>
+            <p>We encourage every alumnus to join our association and contribute to building a vibrant alumni network. Whether through events, mentorship, or financial support, your involvement helps preserve the legacy of our school and creates a stronger community for current and future students.</p>
+        </section>
     </div>
+
+    <footer>
+        <p>&copy; 2024 School Alumni Association. All rights reserved.</p>
+    </footer>
 
     <script>
         function sendWhatsAppMessage(formData) {
             const phonenumber = "+919332073910"; // Replace with the desired WhatsApp number in international format
 
-            // Construct the message with line breaks encoded as %0a
             const message = `
 *Name:* ${formData.get('NAME')}
 *Passout Year:* ${formData.get('PASSOUT YEAR')}
@@ -218,13 +255,8 @@
 
 This is an example of sending HTML form data to WhatsApp.`;
 
-            // Encode the message
             const encodedMessage = encodeURIComponent(message.trim());
-
-            // Construct the WhatsApp URL
             const url = `https://wa.me/${phonenumber}?text=${encodedMessage}`;
-
-            // Open the WhatsApp URL in a new tab/window
             window.open(url, '_blank').focus();
         }
 
@@ -234,25 +266,18 @@ This is an example of sending HTML form data to WhatsApp.`;
             const form = event.target;
             const formData = new FormData(form);
 
-            // Basic Validation (Optional)
-            // You can add more validation as needed
-
-            // Send the WhatsApp message
             sendWhatsAppMessage(formData);
 
-            // Display success message
             document.getElementById('alertSuccess').style.display = 'block';
             document.getElementById('alertError').style.display = 'none';
-
-            // Reset the form after submission
             form.reset();
         });
 
-        // Optional: Handle errors (e.g., if WhatsApp is not available)
         window.addEventListener('error', function(e) {
             document.getElementById('alertSuccess').style.display = 'none';
             document.getElementById('alertError').style.display = 'block';
         });
     </script>
 </body>
+
 </html>
