--- a/whatsappform.html
+++ b/whatsappform.html
@@ -201,7 +201,7 @@
 *Transaction Date:* ${formData.get('TRANSACTION DATE')}
 *Membership:* ${formData.get('MEMBERSHIP')}
 
-This is an example of sending HTML form data to WhatsApp.`;
+Please verify the above details and enlist my name in the alumni. Thank you.`;
 
             const encodedMessage = encodeURIComponent(message.trim());
             const url = `https://wa.me/${phonenumber}?text=${encodedMessage}`;
