--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
 
         <!-- Notice Board Section -->
         <div class="notice-board">
-            <h2>Upcoming Events</h2>
+            <h2>Quick Links</h2>
             <div class="notices">
                 <ul>
+                    <li><a href="<li><a href="<li><a href="whatsappform.html">Link for enlisting name in the DASV Alumni Association</a></li>
                     <li><a href="event-details-education-career.html">Lecture and Interactive Session on "Education and Career" - August 10, 2024</a></li>
                     <!-- Add more events here -->
                     <!-- Example:
