--- a/whatsappform.html
+++ b/whatsappform.html
@@ -120,7 +120,7 @@
 
     <div class="content">
         <section>
-            <h2 style="text-align: center;">Transaction Details</h2>
+            <h2 style="text-align: center;">Enrollment Form</h2>
             <div class="container">
                 <form id="dataForm">
                     <div class="form-group">
