--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <!-- Notice Board Section -->
         <div class="notice-board">
-            <h2>Quick Links</h2>
+            <h2 style="color: #2c3e50;">Quick Links</h2>
             <div class="notices">
                 <ul>
                     <li><a href="<li><a href="<li><a href="whatsappform.html">Link for enlisting name in the DASV Alumni Association</a></li>
