--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <ul>
                     <li><a href="<li><a href="<li><a href="whatsappform.html">Link for enlisting name in the DASV Alumni Association</a></li>
                     <li><a href="event-details-education-career.html">Lecture and Interactive Session on "Education and Career" - August 10, 2024</a></li>
-                    <li><a href="event-details-nadiar-nadi.html">Lecture and Interactive Session on "Nadiar Nadi.html" - July 6, 2024</a></li>
+                    <li><a href="event-details-nadiar-nadi.html">Lecture and Interactive Session on "Nadiar Nadi" - July 6, 2024</a></li>
                     <!-- Add more events here -->
                     <!-- Example:
                     <li><a href="event-details-other-event.html">Event Title - Date</a></li>
